background image and opacity to view background

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,10 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #f0f0f0;
+  background-image: url(https://plus.unsplash.com/premium_photo-1700427425519-361c8128e976?q=80&w=2080&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+  background-size: auto;
+  opacity: .8;
+  
 }
 
 .container {
@@ -17,7 +20,7 @@ body {
 }
 
 h1 {
-  color: #333;
+  color: #000000;
 }
 
 
